--- a/server/public/styles/style.css
+++ b/server/public/styles/style.css
@@ -1,3 +1,17 @@
 body {
     background-color: rgb(205, 207, 191);
 }
+
+table {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+th, td {
+  text-align: left;
+  padding: 8px;
+  border-bottom: 1px solid rgb(75, 54, 54);
+}
+
+/* wow! I will never forget this! */
+#to-do-list tr:hover {background-color: aliceblue;}
