--- a/server/public/styles/style.css
+++ b/server/public/styles/style.css
@@ -15,3 +15,10 @@ th, td {
 
 /* wow! I will never forget this! */
 #to-do-list tr:hover {background-color: aliceblue;}
+
+.isComplete {
+  background-color: purple;
+}
+
+.isNotComplete {
+}
