--- a/server/public/styles/style.css
+++ b/server/public/styles/style.css
@@ -1,3 +1,7 @@
+header {
+  text-align: center;
+}
+
 body {
     background-color: rgb(205, 207, 191);
 }
@@ -18,8 +22,8 @@ th, td {
 #to-do-list tr:hover {background-color: aliceblue;}
 
 .isComplete {
-  background-color: purple;
+  background-color: rgb(50, 112, 42);
 }
 
-.isNotComplete {
-}
+/* .isNotComplete {
+} */
